# jot-cli

./: Cargo.toml
docs/: note-search.md
src/: app_config.rs  args.rs  auth.rs  editor.rs  formatters.rs  init.rs  main.rs  model.rs  profile.rs
src/args/: mod.rs
src/commands/: config.rs  init.rs  login.rs  mod.rs  note.rs
src/test/: asserts.rs  e2e.rs  mod.rs  test_context.rs
src/utils/: date_range.rs  date_source.rs  date_target.rs  date_value.rs  mod.rs
src/utils/date/: date_filter.rs  date_value.rs  mod.rs
src/web_client/: mock.rs  mod.rs  web.rs
test_assets/profile/: default.toml  local.toml
