[package]
name = "jot-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.23", features = ["derive", "cargo", "env"] }
config = { version = "0.14.1", features = ["toml"] }
directories = "5.0.1"
serde = "1.0.210"
serde_json = "1.0.133"
tokio = { version = "1.40.0", features = ["full"] }
chrono = { version = "0.4.38", features = ["serde"] }
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.8"
anyhow = { version = "1.0.45", features = ["backtrace"] }
toml = { version = "0.8.19", features = ["preserve_order"] }
reqwest = { version = "0.12.9", features = ["blocking", "json"] }
webbrowser = "1.0.3"
rand = "0.8"
async-trait = "0.1.83"
termcolor = "1.4.1"
cliclack = { version = "0.3.5" }
